--- a/index.html
+++ b/index.html
@@ -1,27 +1,124 @@
 <!DOCTYPE html>
 <html lang="lv">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vecāku anketa</title>
-  <link rel="stylesheet" href="parent-survey.css" />
+
+  <link rel="stylesheet" href="survey.css" />
 </head>
 
-<body>
-  <div class="app parent-mode">
+<body class="is-page-visible">
 
-    <div class="card">
-      <h1 id="questionTitle"></h1>
+  <div class="app">
+    <div class="card intro-card">
 
-      <div class="answers" id="answers"></div>
-
-      <div class="nav">
-        <button id="nextBtn" disabled>Tālāk</button>
+      <div class="logo-wrapper">
+        <img src="icon/logo.png" alt="Bērna māja" class="logo" />
       </div>
-    </div>
 
+      <h1 id="title"></h1>
+
+      <p class="intro-text" id="introText"></p>
+
+      <!-- language -->
+      <div class="section">
+        <p class="section-title" id="langTitle"></p>
+        <div class="option-group" id="languageOptions">
+          <button data-lang="lv">LV</button>
+          <button data-lang="ru">RU</button>
+          <button data-lang="en">EN</button>
+        </div>
+      </div>
+
+      <!-- branch -->
+      <div class="section">
+        <p class="section-title" id="branchTitle"></p>
+        <div class="option-group" id="branchOptions">
+          <button data-branch="riga">Rīga</button>
+          <button data-branch="liepaja">Liepāja</button>
+        </div>
+      </div>
+
+      <button id="startBtn" class="primary-btn" disabled></button>
+
+    </div>
   </div>
 
-  <script src="parent-survey.js"></script>
+  <script src="texts.js"></script>
+
+  <script>
+    let selectedLanguage = null;
+    let selectedBranch = null;
+
+    function updateStartButton() {
+      document.getElementById("startBtn").disabled = !(selectedLanguage && selectedBranch);
+    }
+// option btn
+    function setupOptionGroup(containerId, storageKey) {
+      const container = document.getElementById(containerId);
+      const buttons = container.querySelectorAll("button");
+
+      buttons.forEach(btn => {
+        btn.addEventListener("click", () => {
+          buttons.forEach(b => b.classList.remove("selected"));
+          btn.classList.add("selected");
+
+          sessionStorage.setItem(storageKey, btn.dataset.lang || btn.dataset.branch);
+        });
+      });
+    }
+
+    setupOptionGroup("languageOptions", "language");
+    setupOptionGroup("branchOptions", "branch");
+
+    // texts
+    function applyTexts(lang) {
+      const t = TEXTS[lang]?.parent_index || TEXTS.lv.parent_index;
+
+      document.getElementById("title").textContent = t.title;
+      document.getElementById("introText").textContent = t.text;
+      document.getElementById("langTitle").textContent = t.language;
+      document.getElementById("branchTitle").textContent = t.branch;
+      document.getElementById("startBtn").textContent = t.start;
+    }
+
+    applyTexts("lv");
+
+    // language buttons
+    document.querySelectorAll("#languageOptions button").forEach(btn => {
+      btn.addEventListener("click", () => {
+        document.querySelectorAll("#languageOptions button").forEach(b => b.classList.remove("selected"));
+        btn.classList.add("selected");
+
+        selectedLanguage = btn.dataset.lang;
+        sessionStorage.setItem("language", selectedLanguage);
+
+        applyTexts(selectedLanguage);
+        updateStartButton();
+      });
+    });
+
+    // branch buttons
+    document.querySelectorAll("#branchOptions button").forEach(btn => {
+      btn.addEventListener("click", () => {
+        document.querySelectorAll("#branchOptions button").forEach(b => b.classList.remove("selected"));
+        btn.classList.add("selected");
+
+        selectedBranch = btn.dataset.branch;
+        sessionStorage.setItem("branch", selectedBranch);
+
+        updateStartButton();
+      });
+    });
+
+    // start
+    document.getElementById("startBtn").addEventListener("click", () => {
+      window.location.href = "survey.html";
+    });
+  </script>
+
 </body>
+
 </html>
