--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- language -->
       <div class="section">
         <p class="section-title" id="langTitle"></p>
-        <div class="option-group" id="languageOptions">
+        <div class="option-group small" id="languageOptions">
           <button data-lang="lv">LV</button>
           <button data-lang="ru">RU</button>
           <button data-lang="en">EN</button>
@@ -35,7 +35,7 @@
       <!-- branch -->
       <div class="section">
         <p class="section-title" id="branchTitle"></p>
-        <div class="option-group" id="branchOptions">
+        <div class="option-group small" id="branchOptions">
           <button data-branch="riga">Rīga</button>
           <button data-branch="liepaja">Liepāja</button>
         </div>
