Improve scale UX and conditional “Other” input behavior
izmanita skala telefoniem un planšetēm uz diagonālo skrolu, vizuāli patīkamu. atjaunots index lapas dizains, pievienots dizains other input.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="survey.css" />
 </head>
 
-<body class="is-page-visible">
+<body class="is-page-visible intro-page">
 
   <div class="app">
     <div class="card intro-card">
